# neuropod

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  404.html  AUTHORS  CNAME  CONTRIBUTING.md  OWNERS  README.md  codecov.yml  docker-compose.test-gpu.yml  docker-compose.test.yml  index.html  master_revision  mkdocs.yml  netlify.toml
.buildkite/: pipeline.yml
source/neuropods/: BUILD  CMakeLists.txt  fwd_declarations.hh  neuropod_input_builder.cc  neuropod_input_builder.hh  neuropod_output_data.cc  neuropod_output_data.hh  neuropods.cc  neuropods.hh  version.hh
source/neuropods/backends/: BUILD  CMakeLists.txt  neuropod_backend.cc  neuropod_backend.hh  tensor_allocator.hh
source/neuropods/backends/multiprocess_backend/: BUILD  multiprocess_backend.cc  multiprocess_worker.cc  shm_tensor.hh
source/neuropods/backends/python_bridge/: BUILD  CMakeLists.txt  numpy_neuropod_tensor.cc  numpy_neuropod_tensor.hh  python_bridge.cc  python_bridge.hh  type_utils.cc  type_utils.hh
source/neuropods/backends/python_bridge/tests/: BUILD  test_python_bridge.cc
source/neuropods/backends/tensorflow/: BUILD  CMakeLists.txt  tf_backend.cc  tf_backend.hh  tf_tensor.cc  tf_tensor.hh  tf_wrappers.hh  type_utils.cc  type_utils.hh
source/neuropods/backends/test_backend/: BUILD  CMakeLists.txt  test_neuropod_backend.cc  test_neuropod_backend.hh  test_neuropod_tensor.cc  test_neuropod_tensor.hh
source/neuropods/backends/torchscript/: BUILD  CMakeLists.txt  infer_utils.cc  infer_utils.hh  torch_backend.cc  torch_backend.hh  torch_tensor.cc  torch_tensor.hh  type_utils.cc  type_utils.hh  version_utils.hh
source/neuropods/bindings/: BUILD  neuropods_native.cc  python_bindings.cc  python_bindings.hh
source/neuropods/conversions/: eigen.hh
source/neuropods/internal/: BUILD  backend_registration.cc  backend_registration.hh  config_utils.cc  config_utils.hh  deleter.cc  deleter.hh  error_utils.hh  framework_version.cc  framework_version.hh  logging.cc  logging.hh  memory_utils.hh  neuropod_input_data.cc  neuropod_input_data.hh  neuropod_loader.cc  neuropod_loader.hh  neuropod_tensor.cc  neuropod_tensor.hh  neuropod_tensor_raw_data_access.cc  neuropod_tensor_raw_data_access.hh  neuropod_tensor_serialization.cc  serialized_tensor.hh  tensor_accessor.hh  tensor_store.cc  tensor_store.hh  tensor_types.hh  tensor_utils.hh  type_macros.hh
source/neuropods/multiprocess/: BUILD  control_messages.cc  control_messages.hh  ipc_control_channel.cc  ipc_control_channel.hh  message_utils.cc  message_utils.hh  multiprocess.cc  multiprocess.hh  multiprocess_worker.cc  multiprocess_worker.hh  multiprocess_worker_main.cc  shm_allocator.cc  shm_allocator.hh  shm_tensor.cc  shm_tensor.hh  tensor_utils.hh
source/neuropods/proxy/: BUILD  neuropod_proxy.hh
source/neuropods/python/: loader.py  packagers.py
source/neuropods/python/backends/: config_utils.py  neuropod_executor.py
source/neuropods/python/tests/: BUILD  cpu_test_basic_environment.py  gpu_test_basic_environment_support.py  gpu_test_torchscript_devices.py  test_basic_environment.py  test_config_utils.py  test_eval_utils.py  test_keras_packaging.py  test_python_isolation.py  test_pytorch_packaging.py  test_pytorch_strings.py  test_randomify.py  test_serialization.py  test_tensor_validation.py  test_tensorflow_packaging.py  test_tensorflow_strings.py  test_torchscript_packaging.py  test_torchscript_strings.py  utils.py
source/neuropods/python/utils/: dtype_utils.py  env_utils.py  eval_utils.py  hash_utils.py  packaging_utils.py  randomify.py  zip_loader.py
source/neuropods/serialization/: BUILD  numpy.cc  numpy.hh  serialization.cc  serialization.hh  stream.hh
source/neuropods/tests/: BUILD  CMakeLists.txt  CMakeLists.txt.in  benchmark_accessor.cc  benchmark_multiprocess.cc  benchmark_shm_allocator.cc  test_accessor.cc  test_backend_registration.cc  test_config_utils.cc  test_conversions_eigen.cc  test_default_backend.cc  test_factories.cc  test_input_output.cc  test_internal_neuropod_tensor.cc  test_ipc_control_channel.cc  test_loader.cc  test_logging.cc  test_models.cc  test_multiprocess.cc  test_multiprocess_allowed_transitions.cc  test_multiprocess_backend.cc  test_multiprocess_perf.cc  test_multiprocess_worker.cc  test_python_bridge.cc  test_serialization.cc  test_serialization_numpy.cc  test_serialization_stream.cc  test_shm_allocator.cc  test_shm_message_utils.cc  test_shm_tensor.cc  test_tensorflow_backend.cc  test_test_backend.cc  test_torch_string_tensor.cc  test_torchscript_backend.cc  test_utils.hh  timing_utils.hh
(+515 files in other folders)
